--- a/02. Partie réglementaire/Article R2124-4 - 24885025.md
+++ b/02. Partie réglementaire/Article R2124-4 - 24885025.md
@@ -1,7 +1,16 @@
 # Article R2124-4
 
-Dès qu'il est saisi de la demande, le préfet consulte le préfet maritime ou le délégué du Gouvernement pour l'action de
-l'Etat en mer.
+Dès qu'il est saisi de la demande, le préfet la soumet à l'avis du préfet maritime ou du délégué du Gouvernement pour
+l'action de l'Etat en mer.
+
+Cet avis est joint au dossier soumis à l'instruction administrative et à l'enquête publique mentionnées aux articles R.
+2124-6 et R. 2124-7.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -13,11 +22,11 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
 _Cité par_:
 
   - Décret n°2018-1204 du 21 décembre 2018 - art. 2
   - Code de l'environnement - art. R181-54-2 (V)
+
+_Modifié par_:
+
+  - Décret n°2020-677 du 4 juin 2020 - art. 2
