--- a/02. Partie réglementaire/Article R2124-42 - 24885115.md
+++ b/02. Partie réglementaire/Article R2124-42 - 24885115.md
@@ -3,13 +3,24 @@
 Lorsqu'une commune ou un groupement de communes compétent sur le territoire desquels l'implantation est prévue le demandent,
 l'autorisation leur est accordée par priorité. Ils déposent leur demande selon les modalités prévues à l'article R. 2124-41.
 
-Lorsque la demande émane d'une autre personne publique ou privée, elle est notifiée à la commune ou au groupement de communes
-compétent. Pour faire valoir la priorité prévue à l'article L. 2124-5, la commune ou le groupement de communes disposent d'un
-délai de trois mois à compter de cette notification. La commune ou le groupement de communes qui ont fait connaître dans ce
-délai leur décision d'exercer leur droit de priorité disposent alors d'un délai de six mois pour déposer leur propre demande.
+Lorsque la demande d'autorisation émane d'une autre personne publique ou privée, elle est immédiatement notifiée par le
+préfet à la commune ou au groupement de communes compétent, qui dispose alors d'un délai de deux mois à compter de cette
+notification pour faire valoir le droit de priorité prévu à l'article L. 2124-5. La commune ou le groupement de communes qui
+a fait connaître dans ce délai sa décision d'exercer son droit de priorité dispose d'un délai de six mois pour déposer sa
+propre demande. En l'absence de réponse ou en cas de renonciation explicite de la commune ou du groupement de communes à son
+droit de priorité dans ce délai et lorsque la demande d'autorisation émanant d'une autre personne publique ou privée est
+formulée en vue d'une exploitation économique, le préfet organise librement une procédure de sélection ou de publicité
+préalable dans les conditions prévues aux articles L. 2122-1-1 et L. 2122-1-4.
 
-Ce droit de priorité peut être exercé à chaque délivrance d'une nouvelle autorisation, sous réserve, s'il y a lieu, de
-l'indemnisation du précédent titulaire dans le cas prévu au dernier alinéa de l'article R. 2124-48.
+Ce droit de priorité de la commune ou du groupement de communes compétent peut être exercé à chaque délivrance d'une nouvelle
+autorisation, sous réserve, s'il y a lieu, de l'indemnisation du précédent titulaire dans le cas prévu au dernier alinéa de
+l'article R. 2124-48.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -21,12 +32,12 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 7
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L2124-5 (V)
-  - Code général de la propriété des personnes publ... - art. R2124-41 (V)
   - Code général de la propriété des personnes publ... - art. R2124-48 (V)
+  - Code général de la propriété des personnes publiques. - art. L2124-5
+  - Code général de la propriété des personnes publiques. - art. R2124-41
