--- a/02. Partie réglementaire/Article R2124-45 - 24885121.md
+++ b/02. Partie réglementaire/Article R2124-45 - 24885121.md
@@ -1,19 +1,28 @@
 # Article R2124-45
 
-L'autorisation d'occupation est délivrée par arrêté du préfet pris conjointement avec le préfet maritime ou le délégué du
-Gouvernement pour l'action de l'Etat en mer. Elle comporte la délimitation de la zone et définit les conditions de son
-aménagement et de son fonctionnement en prenant en compte les impératifs et objectifs mentionnés à l'article R. 2124-41. Elle
-énonce notamment les prescriptions nécessaires pour assurer la sécurité des personnes et des biens et la protection de
-l'environnement.
+L'autorisation est accordée par la voie d'une convention qui fixe les conditions et modalités d'occupation du domaine public
+maritime aux fins de l'aménagement, l'organisation et la gestion de la zone de mouillages et d'équipements légers.
+
+Cette convention est approuvée par arrêté du préfet pris conjointement avec le préfet maritime ou le délégué du Gouvernement
+pour l'action de l'Etat en mer. Elle comporte la délimitation de la zone et définit les conditions de son aménagement et de
+son fonctionnement en prenant en compte les impératifs et objectifs mentionnés à l'article R. 2124-41. Elle énonce notamment
+les prescriptions nécessaires pour assurer la sécurité des personnes et des biens et la protection de l'environnement.
 
 Elle fixe la période annuelle d'exploitation de la zone ainsi que la proportion des postes de mouillage réservés aux
-associations et aux navires ou bateaux de passage. La proportion des postes réservés aux navires ou bateaux de passage ne
-peut être inférieure à 25 %.
+associations et aux navires et bateaux de passage. La proportion des postes réservés, qui ne peut être nulle, est fixée par
+le préfet, sur proposition du demandeur, en fonction du contexte et des caractéristiques de la navigation locale.
 
-L'autorisation précise si l'utilisation des mouillages est subordonnée au règlement par l'usager d'une redevance pour
-services rendus.
+Elle précise les modalités selon lesquelles le titulaire de l'autorisation présente annuellement le bilan de sa gestion, à la
+fois matérielle et financière, ainsi que le projet de budget pour l'année suivante.
 
-Elle ne vaut pas autorisation au titre de la police des eaux.
+La convention précise si l'utilisation des mouillages est subordonnée au règlement par l'usager d'une redevance pour service
+rendu.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -25,14 +34,14 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
 _Cité par_:
 
   - Décret n°2014-1282 du 23 octobre 2014 - art. (V)
 
+_Modifié par_:
+
+  - Décret n°2020-677 du 4 juin 2020 - art. 9
+
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2124-41 (V)
+  - Code général de la propriété des personnes publiques. - art. R2124-41
