--- a/02. Partie réglementaire/Article R2124-49 - 24885129.md
+++ b/02. Partie réglementaire/Article R2124-49 - 24885129.md
@@ -1,12 +1,19 @@
 # Article R2124-49
 
-Il peut être mis fin à l'autorisation sans indemnité s'il n'en a pas été fait usage à l'expiration d'un délai d'un an à
-compter de la date à laquelle elle a été accordée, sauf disposition contraire de l'autorisation.
+La convention peut être résiliée sans indemnité s'il n'a pas été fait usage de l'autorisation d'occupation du domaine public
+maritime à l'expiration d'un délai d'un an à compter de la signature de la convention, sauf stipulation contraire de celle-
+ci.
 
-L'autorisation peut également être supprimée en cas de liquidation judiciaire, de décès du titulaire ou de dissolution s'il
-s'agit d'une personne morale.
+Elle peut également être résiliée en cas de liquidation judiciaire, de décès du titulaire ou de dissolution s'il s'agit d'une
+personne morale.
 
 La résiliation est notifiée par lettre recommandée avec demande d'avis de réception.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -18,9 +25,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 12
 
 _Cité par_:
 
