--- a/02. Partie réglementaire/Article R2124-50 - 24885131.md
+++ b/02. Partie réglementaire/Article R2124-50 - 24885131.md
@@ -1,11 +1,17 @@
 # Article R2124-50
 
 En cas d'inexécution des obligations fixées par les dispositions de la présente sous-section, par celles des articles D.
-341-2, R. 341-4 et R. 341-5 du code du tourisme et par l'acte de délivrance de l'autorisation, il peut être mis fin à celle-
-ci sans indemnité, le titulaire entendu.
+341-2, R. 341-4 et R. 341-5 du code du tourisme et par la convention, il peut être mis fin à celle-ci sans indemnité, le
+titulaire entendu.
 
-Le retrait est prononcé après mise en demeure et expiration d'un délai qui ne peut être inférieur à un mois. Sa notification
-est effectuée dans les mêmes conditions que celles prévues à l'article R. 2124-49 du présent code.
+La résiliation est prononcée après mise en demeure et expiration d'un délai qui ne peut être inférieur à un mois. Sa
+notification est effectuée dans les mêmes conditions que celles prévues à l'article R. 2124-49 du présent code.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -17,11 +23,11 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 13
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2124-49 (V)
+  - Code général de la propriété des personnes publiques. - art. R2124-49
   - Code du tourisme. - art. D341-2 (V)
