--- a/02. Partie réglementaire/Article R2124-51 - 24885133.md
+++ b/02. Partie réglementaire/Article R2124-51 - 24885133.md
@@ -7,12 +7,11 @@ travaux.
 
 Il n'est pas procédé à cette démolition :
 
-1° En cas de renouvellement de l'autorisation ;
+1° Si une autorisation nouvelle est accordée dans le but de poursuivre l'exploitation de la zone de mouillages et
+d'équipements légers, auquel cas l'obligation de démolition et de remise en l'état afférente à l'autorisation précédente est
+transférée sur le nouveau titulaire ;
 
-2° Si une autorisation nouvelle est accordée, auquel cas l'obligation de démolition et de remise en l'état afférente à
-l'autorisation précédente est transférée sur le nouveau titulaire ;
-
-3° Si le préfet notifie au titulaire de l'autorisation qu'il exige le maintien de tout ou partie des équipements et
+2° Si le préfet notifie au titulaire de l'autorisation qu'il exige le maintien de tout ou partie des équipements et
 installations, auquel cas l'Etat se trouve, à compter de cette notification, subrogé dans tous les droits du titulaire sur
 ces équipements et installations qui doivent lui être remis en l'état sans qu'il y ait lieu à indemnité à ce titre ni à
 passation d'un acte.
@@ -22,6 +21,12 @@ après mise en demeure restée sans effet dans le délai qu'elle a fixé.
 
 Le titulaire de l'autorisation demeure responsable des ouvrages et installations jusqu'à leur démolition complète ou leur
 remise à l'administration.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -33,11 +38,11 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 14
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. R2124-40 (V)
-  - Code général de la propriété des personnes publ... - art. R2124-48 (M)
+  - Code général de la propriété des personnes publ... - art. R2124-48 (V)
