--- a/02. Partie réglementaire/Article R2124-54 - 24885139.md
+++ b/02. Partie réglementaire/Article R2124-54 - 24885139.md
@@ -4,6 +4,17 @@ Les rapports du titulaire de l'autorisation ou du gestionnaire et des usagers so
 générales sont affichées, accompagnées des tarifs en vigueur, aux lieux où l'on accède normalement aux zones de mouillages et
 d'équipements légers.
 
+Ces contrats précisent notamment que l'attribution et l'utilisation des postes de mouillage dans le périmètre de la zone
+considérée sont conditionnées à la présentation annuelle d'une attestation d'assurance couvrant la responsabilité civile et
+les frais de retirement du navire ou du bateau, en particulier en cas d'atteinte à la conservation ou à l'utilisation normale
+du domaine public maritime ou à la sécurité du public.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -14,6 +25,6 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 16
