--- a/02. Partie réglementaire/Article R2124-39 - 24885109.md
+++ b/02. Partie réglementaire/Article R2124-39 - 24885109.md
@@ -1,9 +1,15 @@
 # Article R2124-39
 
-L'occupation temporaire du domaine public maritime, en dehors des limites des ports, en vue de l'aménagement, de
+L'occupation temporaire du domaine public maritime, en dehors des limites administratives des ports, en vue de l'aménagement,
 l'organisation et la gestion des zones de mouillages et d'équipements légers destinées à l'accueil et au stationnement des
-navires et bateaux de plaisance fait l'objet d'une autorisation dans les conditions fixées par les dispositions de la
-présente sous-section et des articles D. 341-2, R. 341-4 et R. 341-5 du code du tourisme.
+navires et bateaux tels que définis par le code des transports, fait l'objet d'une autorisation délivrée dans les conditions
+fixées par les dispositions de la présente sous-section et des articles D. 341-2, R. 341-4 et R. 341-5 du code du tourisme.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -15,16 +21,16 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
 _Cité par_:
 
   - Décret n°2014-1273 du 30 octobre 2014 - art. (VD)
   - Code du tourisme. - art. D341-2 (V)
   - Code général de la propriété des personnes publ... - art. R2124-58 (V)
 
+_Modifié par_:
+
+  - Décret n°2020-677 du 4 juin 2020 - art. 4
+
 _Cite_:
 
-  - Code du tourisme. - art. R341-4 (V)
+  - Code du tourisme. - art. R341-4
