--- a/02. Partie réglementaire/Article R2124-40 - 24885111.md
+++ b/02. Partie réglementaire/Article R2124-40 - 24885111.md
@@ -1,10 +1,16 @@
 # Article R2124-40
 
-Dans les zones de mouillage et d'équipements légers, les travaux et équipements réalisés ne doivent en aucun cas entraîner
-l'affectation irréversible du site. En particulier, aucun ouvrage permanent n'est autorisé sur le sol de la mer en dehors des
-équipements d'amarrage et de mise à l'eau. Seuls sont permis, sur le rivage et les lais et relais de la mer, des équipements
-et installations mobiles et relevables dont la nature et l'importance sont compatibles avec l'objet de l'autorisation, sa
-durée et l'obligation de démolition prévue à l'article R. 2124-51.
+Dans les zones de mouillages et d'équipements légers, les travaux et équipements réalisés ne doivent en aucun cas entraîner
+l'affectation irréversible du site. En particulier, seuls sont admis les équipements et installations destinés exclusivement
+à l'amarrage ou la mise à l'eau des navires et bateaux et les équipements et installations mobiles et relevables, dont la
+nature et l'importance sont compatibles avec l'objet de l'autorisation, sa durée et l'obligation de démolition prévue à
+l'article R. 2124-51.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -12,10 +18,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 5
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2124-51 (V)
+  - Code général de la propriété des personnes publiques. - art. R2124-51
