--- a/02. Partie réglementaire/Article R2124-41 - 24885113.md
+++ b/02. Partie réglementaire/Article R2124-41 - 24885113.md
@@ -1,14 +1,32 @@
 # Article R2124-41
 
-La demande d'autorisation, adressée au préfet, est accompagnée d'un rapport de présentation, d'un devis des dépenses
-envisagées, d'une notice descriptive des installations prévues, d'un plan de situation et d'un plan de détail de la zone
-faisant ressortir l'organisation des dispositifs des mouillages ainsi que des installations et des équipements légers annexes
-au mouillage.
+La demande d'autorisation, adressée au préfet, est accompagnée d'un dossier comportant :
+
+1° Un rapport de présentation du projet et de ses incidences potentielles sur l'environnement et sur le patrimoine
+archéologique immergé ;
+
+2° Un devis des dépenses envisagées ;
+
+3° Une notice descriptive des installations prévues ;
+
+4° Un plan de situation et un plan détaillé de la zone, faisant ressortir l'organisation des mouillages ainsi que des
+installations et des équipements légers annexes au mouillage ;
+
+5° Une copie du dossier d'examen au cas par cas transmis à l'autorité environnementale au titre de l'article L. 122-1 du code
+de l'environnement.
+
+Cette demande d'autorisation peut être transmise par voie électronique.
 
 Le rapport de présentation indique les modalités de prise en compte de la vocation et des activités de la zone concernée et
 des terrains avoisinants, des impératifs de sécurité des personnes et des biens notamment du point de vue de la navigation,
 des conditions de préservation des sites et paysages du littoral et des milieux naturels aquatiques ainsi que des contraintes
 relatives à l'écoulement et à la qualité des eaux.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -20,12 +38,12 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
 _Cité par_:
 
   - Décret n°2014-1282 du 23 octobre 2014 - art. (V)
   - Code général de la propriété des personnes publ... - art. R2124-42 (V)
   - Code général de la propriété des personnes publ... - art. R2124-45 (V)
+
+_Modifié par_:
+
+  - Décret n°2020-677 du 4 juin 2020 - art. 6
