--- a/02. Partie réglementaire/Article R2124-46 - 24885123.md
+++ b/02. Partie réglementaire/Article R2124-46 - 24885123.md
@@ -1,9 +1,19 @@
 # Article R2124-46
 
-L'autorisation est délivrée à titre précaire et révocable pour une durée maximale de quinze ans.
+La convention est conclue pour une durée maximale de quinze ans.
 
-Elle peut être renouvelée sur demande du titulaire. Le refus de renouvellement d'une autorisation expirée n'ouvre droit à
-aucune indemnité.
+Elle peut être reconduite, à la demande du bénéficiaire, après instruction administrative menée selon les modalités fixées
+aux articles R. 2124-41 à R. 2124-45.
+
+Elle fixe les modalités de sa modification à la demande du bénéficiaire ainsi que celles d'une dénonciation par
+l'administration, avant l'expiration du terme, pour des motifs d'intérêt général ou dans l'intérêt du domaine occupé selon
+les modalités prévues à l'article R. 2124-48.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -15,6 +25,6 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 10
