--- a/02. Partie réglementaire/Article R2124-48 - 24885127.md
+++ b/02. Partie réglementaire/Article R2124-48 - 24885127.md
@@ -1,8 +1,5 @@
 # Article R2124-48
 
-L'autorisation peut être retirée, en totalité ou en partie, avant l'expiration du terme fixé, pour des motifs d'intérêt
-général ou dans l'intérêt du domaine occupé.
-
 L'indemnité à laquelle peut prétendre le titulaire évincé est égale, sous déduction de l'amortissement calculé dans les
 conditions fixées par le titre d'autorisation, au montant des dépenses exposées pour la réalisation des équipements et
 installations expressément autorisés, dans la mesure où ceux-ci subsistent à la date du retrait.
@@ -22,6 +19,12 @@ Lorsqu'une nouvelle autorisation est accordée à une autre personne, cette dern
 précédent titulaire des investissements qu'il a réalisés, sous les réserves et dans les conditions prévues par le présent
 article.
 
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -32,13 +35,13 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 11
 
 _Cité par_:
 
-  - Code général de la propriété des personnes publ... - art. R2124-42 (M)
+  - Code général de la propriété des personnes publ... - art. R2124-42 (V)
 
 _Cite_:
 
