--- a/02. Partie réglementaire/Article R2124-53 - 24885137.md
+++ b/02. Partie réglementaire/Article R2124-53 - 24885137.md
@@ -4,6 +4,16 @@ Le titulaire de l'autorisation peut, avec l'accord du préfet, confier à un tie
 mouillages et d'équipements légers ainsi que de certains services connexes et la perception de redevances correspondantes. Il
 demeure toutefois seul responsable vis-à-vis de cette autorité.
 
+Dans ce cas, le titulaire de l'autorisation adresse préalablement sa demande au préfet et y joint le projet de contrat qu'il
+entend passer avec son sous-traitant. Le silence gardé pendant deux mois par le préfet sur la demande vaut décision
+d'acceptation.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
+
 **Liens relatifs à cet article**
 
 _Anciens textes_:
@@ -14,9 +24,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 15
 
 _Cité par_:
 
