--- a/02. Partie réglementaire/Article R2124-55 - 24885141.md
+++ b/02. Partie réglementaire/Article R2124-55 - 24885141.md
@@ -1,9 +1,24 @@
 # Article R2124-55
 
-A l'intérieur de la circonscription d'un grand port maritime ou d'un port autonome, les pouvoirs attribués au préfet par les
-dispositions de la présente sous-section et par celles de l'article D. 341-2, des cinquième à septième alinéas de l'article
-R. 341-4 et de l'article R. 341-5 du code du tourisme sont exercés par le directoire du grand port maritime ou le directeur
-du port autonome.
+Les compétences attribuées au préfet par les dispositions de la présente sous-section et par celles de l'article D. 341-2,
+des cinquièmes à septième alinéas de l'article R. 341-4 et de l'article R. 341-5 du code du tourisme sont exercées :
+
+1° Par le directoire du grand port maritime ou le directeur du port autonome lorsque la demande d'autorisation concerne une
+implantation située à l'intérieur de la circonscription d'un grand port maritime ou d'un port autonome ;
+
+2° Par le directeur du Conservatoire de l'espace littoral et des rivages lacustres, à l'exception des règles de police du
+mouillage mentionnées à l'article R. 341-4 du code du tourisme, lorsque la demande d'autorisation concerne une implantation
+située dans le périmètre d'immeubles affectés au conservatoire, au sens de l'article L. 322-6 du code de l'environnement ;
+
+3° Par le directeur du Conservatoire de l'espace littoral et des rivages lacustres, sous réserve d'y être habilité par la
+convention d'attribution passée avec l'Etat, lorsque la demande d'autorisation concerne une implantation située dans le
+périmètre d'immeubles attribués au conservatoire, au sens de l'article L. 322-6-1 du code de l'environnement.
+
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -15,9 +30,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-677 du 4 juin 2020 - art. 17
 
 _Cité par_:
 
@@ -25,6 +40,6 @@ _Cité par_:
 
 _Cite_:
 
-  - Code du tourisme. - art. D341-2 (V)
-  - Code du tourisme. - art. R341-4 (V)
-  - Code du tourisme. - art. R341-5 (V)
+  - Code du tourisme. - art. D341-2
+  - Code du tourisme. - art. R341-4
+  - Code du tourisme. - art. R341-5
