--- a/02. Partie réglementaire/Article R2124-6 - 24885029.md
+++ b/02. Partie réglementaire/Article R2124-6 - 24885029.md
@@ -1,30 +1,32 @@
 # Article R2124-6
 
 La demande fait l'objet d'une instruction administrative conduite par le service gestionnaire du domaine public maritime qui
-consulte les administrations civiles, notamment le chef du service déconcentré chargé des affaires maritimes, ainsi que les
-autorités militaires intéressées.
+consulte les administrations civiles ainsi que les autorités militaires intéressées.
 
 Le service gestionnaire du domaine public maritime recueille l'avis du directeur départemental des finances publiques qui est
 chargé de fixer les conditions financières de la concession.
 
 Le projet est soumis à l'avis de la commission nautique locale ou de la grande commission nautique conformément aux
-dispositions des articles 1er à 3 du décret n° 86-606 du 14 mars 1986 relatif aux commissions nautiques. L'avis du préfet
-maritime ou du délégué du Gouvernement pour l'action de l'Etat en mer est joint au dossier soumis à consultation.
+dispositions des articles 1er à 3 du décret n° 86-606 du 14 mars 1986 relatif aux commissions nautiques.
 
-Le projet est soumis pour avis aux communes et établissements publics de coopération intercommunale territorialement
-intéressés et aux communes et établissements publics de coopération intercommunale dans le ressort desquels, au vu des
-éléments du dossier, l'opération est de nature à entraîner un changement substantiel dans le domaine public maritime.
+Le projet est soumis pour avis aux communes et établissements publics de coopération intercommunale intéressés.
 
 L'absence de réponse dans le délai de deux mois vaut avis favorable.
 
 A l'issue de l'instruction administrative, le service gestionnaire du domaine public maritime transmet le dossier au préfet
 avec sa proposition et, si le projet paraît pouvoir être accepté, un projet de convention.
 
+**Nota:**
+
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
+
 **Liens relatifs à cet article**
 
 _Cite_:
 
-  - Décret n°86-606 du 14 mars 1986 - art. 1 (V)
+  - Décret n°86-606 du 14 mars 1986 - art. 1
 
 _Anciens textes_:
 
@@ -34,12 +36,12 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
 _Cité par_:
 
   - Décret n°2018-1204 du 21 décembre 2018 - art. 2
   - Code de l'environnement - art. R181-54-2 (V)
   - Code général de la propriété des personnes publ... - art. R2124-5 (V)
+
+_Modifié par_:
+
+  - Décret n°2020-677 du 4 juin 2020 - art. 3
