--- a/02. Partie réglementaire/Article R5211-4 - 29399437.md
+++ b/02. Partie réglementaire/Article R5211-4 - 29399437.md
@@ -1,26 +1,32 @@
 # Article R5211-4
 
 Pour l'application du présent code à Saint-Pierre-et-Miquelon, les références aux termes énumérés ci-après sont ainsi
-remplacés : 
+remplacés :
 
-1° " Département " et " région " par " collectivité territoriale " ; 
+1° " Département " et " région " par " collectivité territoriale " ;
 
-2° " Président du conseil général " par " président du conseil territorial " ; 
+2° " Président du conseil général " par " président du conseil territorial " ;
 
-3° " Conseil général " par " conseil territorial " ; 
+3° " Conseil général " par " conseil territorial " ;
 
-4° "   tribunal judiciaire " par " tribunal de première instance " ; 
+4° " tribunal judiciaire " par " tribunal de première instance " ;
 
-5° " cour d'appel " par " tribunal supérieur d'appel " ; 
+5° " cour d'appel " par " tribunal supérieur d'appel " ;
 
-6° " préfet de département " et " préfet de région " par " préfet " ; 
+6° " préfet de département " et " préfet de région " par " préfet " ;
 
-7° " directeur départemental des finances publiques " par " directeur local des finances publiques ".
+7° " directeur départemental des finances publiques " par " directeur local des finances publiques " ;
+
+8° “ conseil scientifique régional du patrimoine naturel ” par “ conseil scientifique territorial du patrimoine naturel ” ;
+
+9° “ commission départementale de la nature, des paysages et des sites ” par “ commission territoriale de la nature, des
+paysages et des sites ”.
 
 **Nota:**
 
-Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
-janvier 2020.
+Conformément à l’article 20 du décret n° 2020-677 du 4 juin 2020, ces dispositions s'appliquent, y compris en cas de
+renouvellement, aux demandes de concession ou d'autorisation déposées après sa publication, ainsi qu'aux autorisations qui en
+résultent.
 
 **Liens relatifs à cet article**
 
@@ -30,4 +36,4 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2019-966 du 18 septembre 2019 - art. 8
+  - Décret n°2020-677 du 4 juin 2020 - art. 18
