--- a/01. Partie législative/Article L5112-1 - 6361485.md
+++ b/01. Partie législative/Article L5112-1 - 6361485.md
@@ -1,15 +1,15 @@
 # Article L5112-1
 
-L'Etat délimite par décret en Conseil d'Etat, au plus tard le 1er janvier 2019, après avis des collectivités territoriales ou
+L'Etat délimite par décret en Conseil d'Etat, au plus tard le 1er juillet 2021, après avis des collectivités territoriales ou
 de leurs groupements, à l'intérieur de la zone des cinquante pas géométriques, d'une part, les espaces urbains et les
 secteurs occupés par une urbanisation diffuse, d'autre part, les espaces naturels. Cette délimitation prend en compte l'état
 d'occupation du sol et les orientations du document stratégique d'aménagement et de mise en valeur de la zone des cinquante
 pas géométriques prévu au IV de l'article 27 de la loi n° 2015-1268 du 14 octobre 2015 d'actualisation du droit des outre-
-mer. 
+mer.
 
 Le schéma d'aménagement régional prévu à l'article L. 4433-7 du code général des collectivités territoriales, les schémas
 directeurs, les schémas de cohérence territoriale, les plans d'occupation des sols et les plans locaux d'urbanisme prévus par
-le code de l'urbanisme sont pris en compte. 
+le code de l'urbanisme sont pris en compte.
 
 Pour l'application des dispositions du présent article, la présence de constructions éparses ne peut faire obstacle à
 l'identification d'un secteur comme espace naturel.
@@ -25,8 +25,8 @@ _Cité par_:
   - Code de l'urbanisme - art. R121-38 (V)
   - Code général de la propriété des personnes publ... - art. L5112-4 (V)
   - Code général de la propriété des personnes publ... - art. L5112-4-1 (VD)
-  - Code général de la propriété des personnes publ... - art. L5112-5 (M)
-  - Code général de la propriété des personnes publ... - art. L5112-6 (V)
+  - Code général de la propriété des personnes publ... - art. L5112-5 (V)
+  - Code général de la propriété des personnes publ... - art. L5112-6 (M)
   - Code général de la propriété des personnes publ... - art. L5112-8 (V)
   - Code général de la propriété des personnes publ... - art. R5112-1 (V)
 
@@ -36,7 +36,8 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 27
+  - Loi n°2015-1268 du 14 octobre 2015 - art. 27 (V)
+  - Loi n°2020-734 du 17 juin 2020 - art. 27
 
 _Anciens textes_:
 
