--- a/01. Partie législative/Article L5112-5 - 6361489.md
+++ b/01. Partie législative/Article L5112-5 - 6361489.md
@@ -7,10 +7,10 @@ d'établissements à usage professionnel. La cession à une personne morale est 
 ou au groupement de collectivités territoriales concerné, qui dispose de trois mois pour faire connaître son avis.
 
 Les demandes de cession faites en application du présent article doivent, sous peine de forclusion, être déposées avant le
-1er janvier 2020. 
+1er janvier 2021.
 
 Le prix de cession est déterminé d'après la valeur vénale du terrain nu à la date du dépôt de la demande de cession. Il est
-fixé selon les règles applicables à l'aliénation des immeubles du domaine privé. 
+fixé selon les règles applicables à l'aliénation des immeubles du domaine privé.
 
 La superficie cédée est ajustée en fonction des nécessités de l'équipement du secteur en voirie et réseaux divers et des
 conditions de cession des fonds voisins. Elle ne peut excéder de plus de la moitié la superficie occupée par l'emprise au sol
@@ -33,8 +33,8 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 27
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 28
+  - Loi n°2015-1268 du 14 octobre 2015 - art. 27 (V)
+  - Loi n°2020-734 du 17 juin 2020 - art. 27
 
 _Anciens textes_:
 
@@ -42,4 +42,4 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publiques. - art. L5112-1
+  - Code général de la propriété des personnes publ... - art. L5112-1 (V)
