--- a/01. Partie législative/Article L5112-6 - 6361490.md
+++ b/01. Partie législative/Article L5112-6 - 6361490.md
@@ -8,7 +8,7 @@ A défaut d'identification des personnes mentionnées à l'alinéa précédent, 
 cession à titre onéreux aux occupants de constructions affectées à leur habitation édifiées avant le 1er janvier 1995.
 
 Les demandes de cession faites en application du présent article doivent, sous peine de forclusion, être déposées avant le
-1er janvier 2020.
+1er janvier 2021.
 
 Le prix de cession est déterminé d'après la valeur vénale du terrain nu à la date du dépôt de la demande de cession. Il est
 fixé selon les règles applicables à l'aliénation des immeubles du domaine privé.
@@ -35,8 +35,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 27 (V)
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 28
+  - Loi n°2020-734 du 17 juin 2020 - art. 27
 
 _Anciens textes_:
 
