--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -113,10 +113,9 @@ son domaine privé.
 
 Chacune de ces cessions fait l'objet d'une convention jointe à l'acte d'aliénation, conclue entre le ministre chargé du
 domaine et l'acquéreur, après avis du ministre chargé du logement, et au vu des rapports transmis par les représentants de
-l'Etat dans les régions concernées et de l'avis de la commission nationale mentionnée au VII. Cette convention détermine les
-objectifs du programme de logements à réaliser. Elle peut prévoir une réalisation des opérations sur une durée totale
-supérieure à cinq ans. Elle prévoit les modalités permettant un contrôle de la réalisation des programmes et de l'application
-du dispositif de décote prévu au présent article.
+l'Etat dans les régions concernées. Cette convention détermine les objectifs du programme de logements à réaliser. Elle peut
+prévoir une réalisation des opérations sur une durée totale supérieure à cinq ans. Elle prévoit les modalités permettant un
+contrôle de la réalisation des programmes et de l'application du dispositif de décote prévu au présent article.
 
 Le prix de cession est déterminé conformément au I. Il fait l'objet d'un versement en deux temps. Au moment de la cession, la
 société mentionnée au premier alinéa du présent V bis verse un acompte correspondant à 40 % de la valeur vénale cumulée des
@@ -139,23 +138,9 @@ aboutir à la résolution de la vente dans les conditions prévues au V.
 
 Le représentant de l'Etat dans la région établit chaque année un bilan qui dresse notamment la liste des terrains
 disponibles, des terrains cédés au cours de l'année écoulée, des modalités et des prix de cession ainsi que des logements
-sociaux mis en chantier ou livrés sur les parcelles cédées. Ce bilan est transmis à la commission nationale mentionnée au VII
-chargée d'établir, pour le compte du ministre chargé du logement, le rapport annuel au Parlement sur la mise en œuvre du
-dispositif, lequel fait l'objet d'un débat devant les commissions permanentes.
+sociaux mis en chantier ou livrés sur les parcelles cédées.
 
-VII. – Il est créé, auprès des ministres chargés du logement et de l'urbanisme, une Commission nationale de l'aménagement, de
-l'urbanisme et du foncier. Elle est composée de deux membres de l'Assemblée nationale et de deux membres du Sénat, de
-représentants de l'Etat dont notamment de représentants des ministres chargés du logement et de l'urbanisme, de représentants
-du ministre chargé du Domaine, de représentants des associations représentatives des collectivités locales, des organismes
-mentionnés aux articles L. 365-1, L. 411-2 et L. 481-1 du code de la construction et de l'habitation, des professionnels de
-l'immobilier, des professionnels de l'aménagement, des organisations de défense de l'environnement et des organisations
-œuvrant dans le domaine de l'insertion, et de personnalités qualifiées.
-
-La commission nationale mentionnée au présent VII est chargée de suivre le dispositif de mobilisation du foncier public en
-faveur du logement. Elle est en particulier chargée de s'assurer que la stratégie adoptée par l'Etat et les établissements
-publics concernés est de nature à favoriser la cession de biens appartenant à leur domaine privé au profit de programmes de
-logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composition et fixe ses modalités de travail et de
-décision.
+VII. – (Abrogé)
 
 VIII. – Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
 351-2 du code de la construction et de l'habitation :
@@ -184,7 +169,7 @@ code ;
 b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au huitième alinéa de l'article L.
 411-2 dudit code.
 
-IX. – Un décret en Conseil d'Etat précise les conditions d'application des I à VII.
+IX. – Un décret en Conseil d'Etat précise les conditions d'application des I à VI.
 
 **Liens relatifs à cet article**
 
@@ -237,7 +222,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2018-607 du 13 juillet 2018 - art. 47
+  - Loi n°2018-699 du 3 août 2018 - art. 82
 
 _Anciens textes_:
 
