--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -107,14 +107,29 @@ Lorsque la cession d'un terrain, bâti ou non, du domaine privé de l'Etat s'ins
 de l'article L. 300-1 du code de l'urbanisme, et après accord des ministres chargés du logement et du domaine, au vu du
 rapport transmis par le représentant de l'Etat dans la région, la convention conclue entre le représentant de l'Etat dans la
 région et l'acquéreur peut prévoir une réalisation de l'opération par tranches échelonnées sur une durée totale supérieure à
-cinq ans dont la première doit être réalisée dans un délai maximal de cinq ans, et permettant chacune un contrôle du
+cinq ans, dont la première doit être réalisée dans un délai maximal de cinq ans, et permettant chacune un contrôle du
 dispositif de décote, dans les conditions prévues aux troisième et quatrième alinéas du présent V.
 
 La convention peut prévoir, en outre, le droit de réservation d'un contingent plafonné à 10 % des logements sociaux du
 programme, au profit de l'administration qui cède son terrain avec décote, pour le logement de ses agents, au-delà du
 contingent dont dispose l'Etat.
 
-V bis. (abrogé)
+V bis. – (Abrogé).
+
+Chacune de ces cessions fait l'objet d'une convention jointe à l'acte d'aliénation, conclue entre le ministre chargé du
+domaine et l'acquéreur, après avis du ministre chargé du logement, et au vu des rapports transmis par les représentants de
+l'Etat dans les régions concernées. Cette convention détermine les objectifs du programme de logements à réaliser. Elle peut
+prévoir une réalisation des opérations sur une durée totale supérieure à cinq ans. Elle prévoit les modalités permettant un
+contrôle de la réalisation des programmes et de l'application du dispositif de décote prévu au présent article.
+
+Le prix de cession est déterminé conformément au I. Il fait l'objet d'un versement en deux temps. Au moment de la cession, la
+société mentionnée au premier alinéa du présent V bis verse un acompte correspondant à 40 % de la valeur vénale cumulée des
+actifs du portefeuille. La valeur vénale retenue est la valeur vénale de marché du logement libre. Lors de l'obtention des
+autorisations d'urbanisme, ladite société effectue un second versement pour chaque actif sur le fondement du prix définitif
+arrêté par détermination de la décote prévue au présent article, en prenant en compte le programme de logement réalisé sur le
+bien et les circonstances locales. Si le prix définitif d'un actif est inférieur à 40 % de sa valeur vénale retenue dans le
+calcul de l'acompte, la somme à restituer par l'Etat s'impute sur les sommes que la société doit au titre de l'acquisition
+d'autres actifs du portefeuille.
 
 VI. – Le représentant de l'Etat dans la région, assisté du comité régional de l'habitat, contrôle l'effectivité de toute
 convention annexée à un acte d'aliénation et définie au V du présent article. A cet effet, l'acquéreur des terrains
@@ -128,23 +143,9 @@ aboutir à la résolution de la vente dans les conditions prévues au V.
 
 Le représentant de l'Etat dans la région établit chaque année un bilan qui dresse notamment la liste des terrains
 disponibles, des terrains cédés au cours de l'année écoulée, des modalités et des prix de cession ainsi que des logements
-sociaux mis en chantier ou livrés sur les parcelles cédées. Ce bilan est transmis à la commission nationale mentionnée au VII
-chargée d'établir, pour le compte du ministre chargé du logement, le rapport annuel au Parlement sur la mise en œuvre du
-dispositif, lequel fait l'objet d'un débat devant les commissions permanentes.
+sociaux mis en chantier ou livrés sur les parcelles cédées.
 
-VII. – Il est créé, auprès des ministres chargés du logement et de l'urbanisme, une Commission nationale de l'aménagement, de
-l'urbanisme et du foncier. Elle est composée de deux membres de l'Assemblée nationale et de deux membres du Sénat, de
-représentants de l'Etat dont notamment de représentants des ministres chargés du logement et de l'urbanisme, de représentants
-du ministre chargé du Domaine, de représentants des associations représentatives des collectivités locales, des organismes
-mentionnés aux articles L. 365-1, L. 411-2 et L. 481-1 du code de la construction et de l'habitation, des professionnels de
-l'immobilier, des professionnels de l'aménagement, des organisations de défense de l'environnement et des organisations
-œuvrant dans le domaine de l'insertion, et de personnalités qualifiées.
-
-La commission nationale mentionnée au présent VII est chargée de suivre le dispositif de mobilisation du foncier public en
-faveur du logement. Elle est en particulier chargée de s'assurer que la stratégie adoptée par l'Etat et les établissements
-publics concernés est de nature à favoriser la cession de biens appartenant à leur domaine privé au profit de programmes de
-logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composition et fixe ses modalités de travail et de
-décision.
+VII. – (Abrogé)
 
 VIII. – Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
 831-1 du code de la construction et de l'habitation :
@@ -170,13 +171,13 @@ décote prévue au présent article :
 a) Les logements occupés par des titulaires de contrats de location-accession mentionnés au 6° de l'article L. 831-1 du même
 code ;
 
-b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au dixième alinéa de l'article L.
+b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au huitième alinéa de l'article L.
 411-2 dudit code ;
 
-c) Les logements faisant l'objet d'un contrat de bail réel solidaire en application du chapitre V du titre V du livre II du
-même code.
+c) Les logements faisant l'objet d'un contrat de bail réel et solidaire en application du chapitre V du titre V du livre II
+du même code.
 
-IX. – Un décret en Conseil d'Etat précise les conditions d'application des I à VII.
+IX. – Un décret en Conseil d'Etat précise les conditions d'application des I à VI.
 
 **Liens relatifs à cet article**
 
@@ -233,7 +234,10 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2019-770 du 17 juillet 2019 - art. 8
+  - Loi n°2018-699 du 3 août 2018 - art. 82
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 23
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 24
+  - Loi n°2018-1317 du 28 décembre 2018 - art. 274
 
 _Anciens textes_:
 
